[project]
name = "extract"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.3",
    "tqdm>=4.67.1",
    "more-itertools>=10.6.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.31.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.4",
    "black>=24.10.0",
    "isort>=5.13.2",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/extract"]
